JavaDocumentCreatorTest.java - add generics + new assertion method for Doubles